--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,10 +7,6 @@ on:
         description: 'Postgres version'
         required: true
         default: '17'
-      EXTENSIONS:
-        description: 'Postgres extensions to install'
-        required: true
-        default: 'pglogical'
 
 jobs:
   build:
@@ -27,17 +23,7 @@ jobs:
     - name: calculate image tag
       id: vars
       run: |
-        # step 1: order extensions alphabetically
-        export EXTENSIONS=$(echo "${{ github.event.inputs.EXTENSIONS }}" | tr ' ' '\n' | sort | tr '\n' ' ')
-
-        # this is good but it leaves a trailing space. Fix it:
-        export EXTENSIONS=$(echo "${EXTENSIONS}" | sed 's/ $//g')
-
-        # step 2: if exists, replace extension timescaledb with its versioned equivalent; replace spaces with dashes
-        export EXTENSIONS=$(echo "${{ github.event.inputs.EXTENSIONS }}")
-
-        # step 3: output variable to github action
-        echo "IMAGE_TAG=${{ github.event.inputs.PG_VERSION }}-${EXTENSIONS}" >> $GITHUB_OUTPUT
+        echo "IMAGE_TAG=${{ github.event.inputs.PG_VERSION }}" >> $GITHUB_OUTPUT
     - uses: docker/build-push-action@v3
       with:
         context: .
@@ -46,4 +32,3 @@ jobs:
         tags: ghcr.io/${{ github.repository_owner }}/postgresql:${{ steps.vars.outputs.IMAGE_TAG }}
         build-args: |
           POSTGRESQL_VERSION=${{ github.event.inputs.PG_VERSION }}
-          EXTENSIONS=${{ github.event.inputs.EXTENSIONS }}
