--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,11 +10,14 @@ on:
 
 jobs:
   build:
+    permissions:
+      packages: write
+      contents: read
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - uses: docker/setup-buildx-action@v2
-    - uses: docker/login-action@v2
+    - uses: docker/login-action@v3
       # authenticate ghcr.io
       with:
         registry: ghcr.io
